点击卡名不搜索，连接魔法·陷阱卡图标微调

--- a/src/views/yugioh/style/astral.scss
+++ b/src/views/yugioh/style/astral.scss
@@ -12,6 +12,12 @@
     right: 144px;
   }
 
+  .link-spell-trap {
+    top: 254px;
+    right: 245px;
+    font-size: 76px;
+  }
+
   .pendulum-description {
     top: 1282px;
     font-size: calc(42px * var(--descriptionZoom));
