--- a/src/views/yugioh/style/sc.scss
+++ b/src/views/yugioh/style/sc.scss
@@ -19,7 +19,18 @@
 
   .link-spell-trap {
     top: 254px;
-    right: 230px;
+    right: 225px;
+    font-size: 76px;
+    letter-spacing: 2px;
+
+    .spell-trap-icon {
+      margin-left: 10px;
+    }
+  }
+
+  .link-spell-trap {
+    top: 254px;
+    right: 225px;
     font-size: 76px;
     letter-spacing: 2px;
 
