--- a/src/views/yugioh/style/en.scss
+++ b/src/views/yugioh/style/en.scss
@@ -19,6 +19,19 @@
       margin-left: 10px;
       margin-bottom: -20px;
     }
+  }	
+
+  .link-spell-trap {
+    font-family: ygo-en-race, serif;
+    top: 247px;
+    right: 255px;
+    font-size: 74px;
+    letter-spacing: 1px;
+
+    .spell-trap-icon {
+      margin-left: 10px;
+      margin-bottom: -20px;
+    }
   }
 
   .pendulum-description {
